# interpretable-biogas-forecasting

./: README.md  bayesian_tuning.py  benchmark.py  expert_interview_1.md  expert_interview_2.md  expert_interview_3.md  feature_selection.py  generate_dummy_data.py  models.py  preprocessing_utils.py  pyproject.toml  selected_feature_sets.py  train_flow.py  training.py
exploratory_data_analysis/: __init__.py  base_features_eda.ipynb  eda_utils.py  nan_analysis.ipynb
