[tool.poetry]
name = "intrepretml"
version = "0.1.0"
description = "Interpretable ML for time series forecasting (public version)"
authors = ["Niklas Koenigsdorff"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
interpret = "^0.7.2"
mlflow = "^3.4.0"
optuna = "^4.8.0"
scikit-learn = "^1.7.2"
pygam = "^0.10.1"
gaminet = "^0.6.1"
catboost = "^1.2.8"
exnn = {git = "https://github.com/SelfExplainML/exnn.git"}
tensorflow = "2.14"
igann = "^0.1.7"
torch = "2.5"
nam-interpret = {git = "https://github.com/lemeln/nam.git"}
xgboost = "^2.0.0"
prophet = "^1.1.5"
pydantic = "^2.0"
holidays = "^0.45"
mlxtend = "^0.23.0"
pandas = "^2.0"
numpy = "^1.26"
matplotlib = "^3.8"
seaborn = "^0.13"
plotly = "^5.20"
shap = "^0.45"
jupyter = "^1.0"
ipykernel = "^6.0"
nbconvert = "^7.0"
statsmodels = "^0.14"
scipy = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
